# oarepo-app

./: .gitignore  CHANGELOG.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.bin/: oarepo-app-build  twine
.github/actions/init-tools/: action.yml
.github/workflows/: after_merge.yml  build.yml  create_branch.yml  release.yml  show_dependencies.yaml  start.yml
src/oarepo_app/: __init__.py
tools/: pyproject.toml
tools/src/oarepo_build_tools/: constants.py  dependency_tree.py  dependency_tree_helper.py  git.py  logs.py  main.py  python.py  upload_old_packages.py
tools/src/oarepo_build_tools/templates/: CHANGELOG.md.jinja  dependency_graph.html.j2
tools/src/oarepo_build_tools/templates/html/: .gitignore  README.md  build.js  build.sh  graph.js  package.json  styles.css
