[project]
name = "oarepo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miroslav Simek", email = "3385642+mesemus@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "oarepo==14.0.0",
    "oarepo-communities==6.0.0.dev0",
    "oarepo-dashboard==2.0.0.dev0",
    "oarepo-glitchtip==1.1.1",
    "oarepo-invenio-typing-stubs==0.1.29",
    "oarepo-model==0.1.0.dev0",
    "oarepo-oidc-einfra==2.0.0.dev0",
    "oarepo-rdm==1.0.0.dev0",
    "oarepo-requests==3.0.0.dev0",
    "oarepo-runtime==2.0.0.dev0",
    "oarepo-theme==1.0.0.dev0",
    "oarepo-ui==7.0.0.dev0",
    "oarepo-vocabularies==3.0.0.dev0",
    "oarepo-workflows==2.0.0.dev0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "tools",
]
