[project]
name = "oarepo-app"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miroslav Simek", email = "3385642+mesemus@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "json5",
]

[project.optional-dependencies]
development = [
    "oarepo[s3]>=14.0.0b1,<15.0.0",
    "marshmallow-i18n-messages",
    "ccmm-invenio>=1.1.0,<1.2.0",
    "oarepo-communities>=7.0.0,<8.0.0",
    "oarepo-dashboard>=3.0.0,<4.0.0",
    "oarepo-glitchtip>=1.0.0,<2.0.0",
    "oarepo-invenio-typing-stubs>=0.0.0,<1.0.0",
    "oarepo-model>=1.0.0,<2.0.0",
    "oarepo-oidc-einfra>=3.0.0,<4.0.0",
    "oarepo-rdm>=2.0.0,<3.0.0",
    "oarepo-requests>=4.0.0,<5.0.0",
    "oarepo-runtime>=3.0.0,<4.0.0",
    "oarepo-theme>=2.0.0,<3.0.0",
    "oarepo-ui>=8.0.0,<9.0.0",
    "oarepo-vocabularies>=4.0.0,<5.0.0",
    "oarepo-workflows>=3.0.0,<4.0.0",
]
production = [
    "oarepo[s3]==14.2.1b9.dev0+6.rdm.14.0.0b9.dev0",
    "marshmallow-i18n-messages==0.1.1",
    "ccmm-invenio==1.1.0",
    "oarepo-communities==7.0.1",
    "oarepo-dashboard==3.0.0",
    "oarepo-glitchtip==1.1.1",
    "oarepo-invenio-typing-stubs==0.1.31",
    "oarepo-model==1.0.1",
    "oarepo-oidc-einfra==3.0.1",
    "oarepo-rdm==2.0.0",
    "oarepo-requests==4.0.0",
    "oarepo-runtime==3.0.1",
    "oarepo-theme==2.0.0",
    "oarepo-ui==8.0.0",
    "oarepo-vocabularies==4.0.0",
    "oarepo-workflows==3.0.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/oarepo_app",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/oarepo_app",
]
